Fixing mobile layout issues

--- a/src/components/Education/styles.scss
+++ b/src/components/Education/styles.scss
@@ -89,7 +89,7 @@
         width: 100%;
 
         .inner-info {
-            padding: 50px 40px 20px 145px;
+            padding: 50px 30px 20px 145px;
         }
     }
 } 
