--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -126,4 +126,10 @@
             transform: translateY(-45%);
         }    
     }
+
+    @media screen and (max-width: 767px) {
+        .copyright {
+            right: 0;
+        }
+    }
 }
