--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -125,12 +125,12 @@ header {
             flex-direction: column;
             height: 0;
             justify-content: flex-start;
-            margin-top: 80px;
+            margin-top: 79px;
             position: absolute;
             right: 0;
             top: 0;
             transition: height 0.6s ease;
-            width: 100vw;
+            width: 100%;
             z-index: 2;
 
             &.active {
