--- a/src/components/PageTitle/styles.scss
+++ b/src/components/PageTitle/styles.scss
@@ -54,6 +54,20 @@
                 font-size: 3.5rem;
             }
         }
+
+        @media screen and (max-width: 575px) {
+            + span {
+                font-size: 3rem;
+            }
+        }
+
+        @media screen and (max-width: 365px) {
+            font-size: 2rem;
+
+            + span {
+                font-size: 2.5rem;
+            }
+        }
     }
 }
 
